# socket

./: CMakeLists.txt  README.md  g.json  main.c  socket.c
.github/workflows/: cmake.yml
cmake/: sync-config.cmake
include/socket/: socket.h
